--- a/assets/_locales/pt/messages.json
+++ b/assets/_locales/pt/messages.json
@@ -6,10 +6,10 @@
 "cj_i18n_02147":{"message":"Qualidade de exibição"},
 "cj_i18n_02148":{"message":"FPS"},
 "cj_i18n_02149":{"message":"FPS ou menos"},
-"cj_i18n_02152":{"message":"Os vídeos serão reproduzidos a 30 FPS para essa qualidade."},
+"cj_i18n_02152":{"message":"Os vídeos serão reproduzidos a 30 FPS para esta qualidade."},
 "cj_i18n_06567":{"message":"Escolher tamanho"},
 "cj_i18n_06568":{"message":"Redimensionar vídeos automaticamente"},
-"cj_i18n_06858":{"message":"Todas as taxas de quadros"},
+"cj_i18n_06858":{"message":"Todas as taxas de quadro"},
 "cj_i18n_06859":{"message":"Tamanho do player"},
 "cj_i18n_06860":{"message":"Desenvolvedor de suporte"},
 "cj_i18n_06861":{"message":"Avalie a extenção"},
@@ -17,6 +17,7 @@
 "cj_i18n_07096":{"message":"Abrir menu de opções"},
 "cj_i18n_07097":{"message":"Visualização padrão"},
 "cj_i18n_07098":{"message":"Visualização de cinema"},
-"cj_i18n_07099":{"message":"__fps_numero__ FPS e inferior"},
-"cj_i18n_07100":{"message":"__fps_numero__ FPS ate __fps_numero_b__ FPS"}
+"cj_i18n_07099":{"message":"__fps_number__ FPS e inferior"},
+"cj_i18n_07100":{"message":"__fps_number__ FPS ate __fps_number_b__ FPS"},
+"cj_i18n_07101":{"message":"__fps_number__ FPS e superior"}
 }
