--- a/assets/_locales/fa/messages.json
+++ b/assets/_locales/fa/messages.json
@@ -1,17 +1,10 @@
 {
 "cj_i18n_00354":{"message":"اهدا"},
-"cj_i18n_01440":{"message":"موارد برگزیده"},
 "cj_i18n_02146":{"message":"تنظیم خودکار کیفیت تصویر یوتیوب بر حسب ف\\ث"},
-"cj_i18n_02147":{"message":"بازدید کیفیت"},
 "cj_i18n_02148":{"message":"ف\\ث‌های ویدیوها"},
 "cj_i18n_02149":{"message":"ف\\ث و جز آن"},
 "cj_i18n_06858":{"message":"همه‌ی نسبت‌های نمایش تصویر"},
-"cj_i18n_06859":{"message":"اندازه‌ی پخش کننده"},
 "cj_i18n_06862":{"message":"استفاده از کیفیت مشابه برای هر نمایش"},
-"cj_i18n_07096":{"message":"فهرست گزینه‌های بازکردن"},
 "cj_i18n_07097":{"message":"نمای پیش‌فرض"},
-"cj_i18n_07098":{"message":"نمای سینمایی"},
-"cj_i18n_07099":{"message":"__fps_number__ ف\\ث و کمتر"},
-"cj_i18n_07100":{"message":"__fps_number__ ف\\ث تا __fps_number__ ف\\ث"},
-"cj_i18n_07101":{"message":"__fps_number__ ف\\ث و بیشتر"}
+"cj_i18n_07098":{"message":"نمای سینمایی"}
 }
