--- a/assets/_locales/ka/messages.json
+++ b/assets/_locales/ka/messages.json
@@ -1,4 +1,3 @@
 {
-"cj_i18n_00354":{"message":"შემოწირულობა"},
-"cj_i18n_01440":{"message":"პარამეტრები"}
+"cj_i18n_00354":{"message":"შემოწირულობა"}
 }
