--- a/assets/_locales/fil/messages.json
+++ b/assets/_locales/fil/messages.json
@@ -1,7 +1,4 @@
 {
 "cj_i18n_00354":{"message":"Mag-donate"},
-"cj_i18n_01440":{"message":"Mga Kagustuhan"},
-"cj_i18n_02146":{"message":"Automatically set the video quality on YouTube according to its FPS!"},
-"cj_i18n_02147":{"message":"Tingnan ang kalidad"},
-"cj_i18n_06965":{"message":"Help localize"}
+"cj_i18n_02146":{"message":"Automatically set the video quality on YouTube according to its FPS!"}
 }
