--- a/assets/_locales/it/messages.json
+++ b/assets/_locales/it/messages.json
@@ -1,24 +1,15 @@
 {
 "cj_i18n_00354":{"message":"Dona"},
-"cj_i18n_01440":{"message":"Preferenze"},
 "cj_i18n_01605":{"message":"Contribuisci alla traduzione"},
 "cj_i18n_02146":{"message":"Imposta automaticamente la qualità del video su YouTube in base agli FPS!"},
-"cj_i18n_02147":{"message":"Qualità visualizzazioni"},
 "cj_i18n_02148":{"message":"FPS video"},
 "cj_i18n_02149":{"message":"FPS e meno"},
-"cj_i18n_02152":{"message":"I video verranno riprodotti a 30 FPS per questa qualità."},
 "cj_i18n_06567":{"message":"Mantieni dimensione su"},
 "cj_i18n_06568":{"message":"Auto-ridimensiona video"},
 "cj_i18n_06858":{"message":"Tutti i frame rate"},
-"cj_i18n_06859":{"message":"Dimensione del Player"},
 "cj_i18n_06860":{"message":"Supporta lo sviluppatore"},
 "cj_i18n_06861":{"message":"Valuta estensione"},
 "cj_i18n_06862":{"message":"Imposta la stessa qualità per tutti i frame rate"},
-"cj_i18n_06965":{"message":"Aiuta a localizzare"},
-"cj_i18n_07096":{"message":"Apri Menu Opzioni"},
 "cj_i18n_07097":{"message":"Vista predefinita"},
-"cj_i18n_07098":{"message":"Vista cinema"},
-"cj_i18n_07099":{"message":"__fps_numero__ FPS e inferiore"},
-"cj_i18n_07100":{"message":"__fps_numero__ FPS fino a __fps_numero_b__ FPS"},
-"cj_i18n_07101":{"message":"__fps_numero__ FPS e superiore"}
+"cj_i18n_07098":{"message":"Vista cinema"}
 }
