--- a/assets/_locales/tl/messages.json
+++ b/assets/_locales/tl/messages.json
@@ -1,6 +1,3 @@
 {
-"cj_i18n_00354":{"message":"Mag-donate"},
-"cj_i18n_01440":{"message":"Mga Kagustuhan"},
-"cj_i18n_02147":{"message":"Tingnan ang kalidad"},
-"cj_i18n_06965":{"message":"Help localize"}
+"cj_i18n_00354":{"message":"Mag-donate"}
 }
