package.json: Fixed `scripts.package:stores-firefox`

--- a/assets/_locales/hu/messages.json
+++ b/assets/_locales/hu/messages.json
@@ -9,5 +9,7 @@
 "cj_i18n_06858":{"message":"Összes képfrissítés"},
 "cj_i18n_06860":{"message":"A fejlesztő támogatása"},
 "cj_i18n_06861":{"message":"Kiterjesztés értékelése"},
-"cj_i18n_06862":{"message":"Ugyan az a minőség használata az összes képkocka sebességhez"}
+"cj_i18n_06862":{"message":"Ugyan az a minőség használata az összes képkocka sebességhez"},
+"cj_i18n_07265":{"message":"Ebben a minőségben a videók akár 30 FPS-sel is lejátszhatóak."},
+"cj_i18n_07266":{"message":"A bővítmény be van kapcsolva"}
 }
