--- a/assets/_locales/tr/messages.json
+++ b/assets/_locales/tr/messages.json
@@ -1,7 +1,7 @@
 {
 "cj_i18n_00354":{"message":"Bağış yap"},
 "cj_i18n_01605":{"message":"Çevirilerde yardım edin"},
-"cj_i18n_02146":{"message":"Video kalitesini videonun FPS' sine göre otomatik olarak ayarla"},
+"cj_i18n_02146":{"message":"Video kalitesini videonun FPS' sine göre otomatik olarak ayarla!"},
 "cj_i18n_06567":{"message":"Şu boyutta tut"},
 "cj_i18n_06568":{"message":"Videolar otomatik boyutlandır"},
 "cj_i18n_06858":{"message":"Tüm kare hızları"},
