--- a/assets/_locales/pl/messages.json
+++ b/assets/_locales/pl/messages.json
@@ -1,8 +1,8 @@
 {
 "cj_i18n_00354":{"message":"Darowizna"},
 "cj_i18n_01605":{"message":"Pomóż w tłumaczeniu"},
-"cj_i18n_02146":{"message":"Automatycznie ustaw jakość wideo na YouTube zgodnie z FPS!"},
-"cj_i18n_02148":{"message":"FPS wideo"},
+"cj_i18n_02146":{"message":"Automatycznie ustaw jakość filmu na YouTube zgodnie z jego FPS!"},
+"cj_i18n_02148":{"message":"FPS"},
 "cj_i18n_02149":{"message":"FPS i mniej"},
 "cj_i18n_06567":{"message":"Zachowaj rozmiar na"},
 "cj_i18n_06568":{"message":"Automatyczna zmiana rozmiaru filmów"},
@@ -11,5 +11,7 @@
 "cj_i18n_06861":{"message":"Oceń rozszerzenie"},
 "cj_i18n_06862":{"message":"Użyj tej samej jakości dla wszystkich częstotliwości odświeżania"},
 "cj_i18n_07097":{"message":"Widok domyślny"},
-"cj_i18n_07098":{"message":"Widok kinowy"}
+"cj_i18n_07098":{"message":"Widok kinowy"},
+"cj_i18n_07265":{"message":"Filmy będą odtwarzane z prędkością do 30 FPS dla tej jakości."},
+"cj_i18n_07266":{"message":"Rozszerzenie jest włączone"}
 }
