--- a/assets/_locales/zh_TW/messages.json
+++ b/assets/_locales/zh_TW/messages.json
@@ -11,5 +11,7 @@
 "cj_i18n_06861":{"message":"評價擴充功能"},
 "cj_i18n_06862":{"message":"對所有幀數使用相同的畫質"},
 "cj_i18n_07097":{"message":"預設模式"},
-"cj_i18n_07098":{"message":"劇院模式"}
+"cj_i18n_07098":{"message":"劇院模式"},
+"cj_i18n_07265":{"message":"影片會在這個畫質下用最高30fps播放"},
+"cj_i18n_07266":{"message":"插件已啟動"}
 }
