--- a/assets/_locales/pl/messages.json
+++ b/assets/_locales/pl/messages.json
@@ -2,7 +2,7 @@
 "cj_i18n_00354":{"message":"Darowizna"},
 "cj_i18n_01605":{"message":"Pomóż w tłumaczeniu"},
 "cj_i18n_02146":{"message":"Automatycznie ustaw jakość filmu na YouTube zgodnie z jego FPS!"},
-"cj_i18n_02148":{"message":"FPS"},
+"cj_i18n_02148":{"message":"FPS wideo"},
 "cj_i18n_02149":{"message":"FPS i mniej"},
 "cj_i18n_06567":{"message":"Zachowaj rozmiar na"},
 "cj_i18n_06568":{"message":"Automatyczna zmiana rozmiaru filmów"},
