--- a/assets/_locales/tr/messages.json
+++ b/assets/_locales/tr/messages.json
@@ -7,5 +7,7 @@
 "cj_i18n_06858":{"message":"Tüm kare hızları"},
 "cj_i18n_06860":{"message":"Geliştiriciyi destekle"},
 "cj_i18n_06861":{"message":"Eklentiyi derecelendir"},
-"cj_i18n_06862":{"message":"Bütün kare hızları için aynı kaliteyi kullan"}
+"cj_i18n_06862":{"message":"Bütün kare hızları için aynı kaliteyi kullan"},
+"cj_i18n_07265":{"message":"Videolar bu kalite için 30 FPS'de oynayacak"},
+"cj_i18n_07266":{"message":"Eklenti açık"}
 }
