--- a/assets/_locales/ru/messages.json
+++ b/assets/_locales/ru/messages.json
@@ -11,5 +11,7 @@
 "cj_i18n_06861":{"message":"Оценить расширение"},
 "cj_i18n_06862":{"message":"Применять одинаковое качество для всех значений FPS"},
 "cj_i18n_07097":{"message":"Обычный режим"},
-"cj_i18n_07098":{"message":"Режим кинотеатра"}
+"cj_i18n_07098":{"message":"Режим кинотеатра"},
+"cj_i18n_07265":{"message":"Видео будет воспроизводиться со скоростью до 30 кадров в секунду для этого качества."},
+"cj_i18n_07266":{"message":"Расширение включено"}
 }
