Updated translation messages

--- a/assets/_locales/de/messages.json
+++ b/assets/_locales/de/messages.json
@@ -9,5 +9,6 @@
 "cj_i18n_06858":{"message":"Alle Bildraten"},
 "cj_i18n_06860":{"message":"Unterstütze den Entwickler"},
 "cj_i18n_06861":{"message":"Bewerte die Erweiterung"},
-"cj_i18n_06862":{"message":"Nutze die selbe Qualität für alle Bildraten"}
+"cj_i18n_06862":{"message":"Nutze die selbe Qualität für alle Bildraten"},
+"cj_i18n_07266":{"message":"Erweiterung ist eingeschaltet"}
 }
