--- a/assets/_locales/zh_CN/messages.json
+++ b/assets/_locales/zh_CN/messages.json
@@ -12,6 +12,6 @@
 "cj_i18n_06862":{"message":"对所有画质使用相同的帧数"},
 "cj_i18n_07097":{"message":"预设模式"},
 "cj_i18n_07098":{"message":"剧院模式"},
-"cj_i18n_07265":{"message":"影片会在这个画质下用最高30fps播放"},
-"cj_i18n_07266":{"message":"插件已啟动"}
+"cj_i18n_07265":{"message":"视频播放质量最高为30FPS"},
+"cj_i18n_07266":{"message":"插件已开启"}
 }
