Updated translation messages

--- a/assets/_locales/be/messages.json
+++ b/assets/_locales/be/messages.json
@@ -13,5 +13,6 @@
 "cj_i18n_07097":{"message":"Стандартны выгляд"},
 "cj_i18n_07098":{"message":"Рэжым тэатра"},
 "cj_i18n_07265":{"message":"Для гэтай якасці відэа будуць прайгравацца з хуткасцю да 30 кадраў у секунду."},
-"cj_i18n_07266":{"message":"Пашырэнне ўключана"}
+"cj_i18n_07266":{"message":"Пашырэнне ўключана"},
+"cj_i18n_07392":{"message":"Выкарыстоўваць павышаны бітрэйт, пры найвышэйшай якасці"}
 }
