--- a/assets/_locales/es/messages.json
+++ b/assets/_locales/es/messages.json
@@ -1,7 +1,7 @@
 {
 "cj_i18n_00354":{"message":"Donar"},
 "cj_i18n_01605":{"message":"Ayudar con traducciones"},
-"cj_i18n_02146":{"message":"Establezca automáticamente la calidad del vídeo en YouTube según su FPS!"},
+"cj_i18n_02146":{"message":"Establezca automáticamente la calidad del vídeo en YouTube según sus FPS!"},
 "cj_i18n_02148":{"message":"videos FPS"},
 "cj_i18n_02149":{"message":"FPS y menor"},
 "cj_i18n_06567":{"message":"Mantener tamaño en"},
