--- a/assets/_locales/zh_CN/messages.json
+++ b/assets/_locales/zh_CN/messages.json
@@ -10,8 +10,9 @@
 "cj_i18n_06860":{"message":"支持开发员"},
 "cj_i18n_06861":{"message":"评价扩展插件"},
 "cj_i18n_06862":{"message":"对所有画质使用相同的帧数"},
-"cj_i18n_07097":{"message":"预设模式"},
+"cj_i18n_07097":{"message":"预设检视模式"},
 "cj_i18n_07098":{"message":"剧院模式"},
 "cj_i18n_07265":{"message":"视频播放质量最高为30FPS"},
-"cj_i18n_07266":{"message":"插件已开启"}
+"cj_i18n_07266":{"message":"插件已开启"},
+"cj_i18n_07392":{"message":"使用强化位元率 (当它为最高画质时)"}
 }
