--- a/assets/_locales/de/messages.json
+++ b/assets/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
 "cj_i18n_00354":{"message":"Spenden"},
-"cj_i18n_01605":{"message":"Mit der Übersetzung helfen"},
+"cj_i18n_01605":{"message":"Bei der Übersetzung helfen"},
 "cj_i18n_02146":{"message":"Stelle die Videoqualität auf Youtube automatisch entsprechend der FPS ein!"},
 "cj_i18n_02148":{"message":"FPS Videos"},
 "cj_i18n_02149":{"message":"FPS und niedriger"},
@@ -9,6 +9,7 @@
 "cj_i18n_06858":{"message":"Alle Bildraten"},
 "cj_i18n_06860":{"message":"Unterstütze den Entwickler"},
 "cj_i18n_06861":{"message":"Bewerte die Erweiterung"},
-"cj_i18n_06862":{"message":"Nutze die selbe Qualität für alle Bildraten"},
-"cj_i18n_07266":{"message":"Erweiterung ist eingeschaltet"}
+"cj_i18n_06862":{"message":"Gleiche Qualität für alle Bildraten"},
+"cj_i18n_07266":{"message":"Erweiterung aktivieren"},
+"cj_i18n_07392":{"message":"Nutze die verbesserte Bitrate, sofern verfügbar."}
 }
