Updated translation messages

--- a/assets/_locales/zh_CN/messages.json
+++ b/assets/_locales/zh_CN/messages.json
@@ -12,7 +12,7 @@
 "cj_i18n_06862":{"message":"对所有画质使用相同的帧数"},
 "cj_i18n_07097":{"message":"预设检视模式"},
 "cj_i18n_07098":{"message":"剧院模式"},
-"cj_i18n_07265":{"message":"视频播放质量最高为30FPS"},
+"cj_i18n_07265":{"message":"将此画质下的帧率限制为30FPS"},
 "cj_i18n_07266":{"message":"插件已开启"},
-"cj_i18n_07392":{"message":"使用强化位元率 (当它为最高画质时)"}
+"cj_i18n_07392":{"message":"当视频为最高质量时，开启YouTube的增强比特率功能"}
 }
