Updated translation messages

--- a/assets/_locales/it/messages.json
+++ b/assets/_locales/it/messages.json
@@ -11,5 +11,6 @@
 "cj_i18n_06861":{"message":"Valuta estensione"},
 "cj_i18n_06862":{"message":"Imposta la stessa qualità per tutti i frame rate"},
 "cj_i18n_07097":{"message":"Vista predefinita"},
-"cj_i18n_07098":{"message":"Vista cinema"}
+"cj_i18n_07098":{"message":"Vista cinema"},
+"cj_i18n_07265":{"message":"I video pagheranno fino a 30 FPS per questa qualità."}
 }
