--- a/assets/_locales/ru/messages.json
+++ b/assets/_locales/ru/messages.json
@@ -13,5 +13,6 @@
 "cj_i18n_07097":{"message":"Обычный режим"},
 "cj_i18n_07098":{"message":"Режим кинотеатра"},
 "cj_i18n_07265":{"message":"Видео будет воспроизводиться со скоростью до 30 кадров в секунду для этого качества."},
-"cj_i18n_07266":{"message":"Расширение включено"}
+"cj_i18n_07266":{"message":"Расширение включено"},
+"cj_i18n_07392":{"message":"Использовать повышенный битрейт, если он обеспечивает максимальное качество"}
 }
