--- a/assets/_locales/pl/messages.json
+++ b/assets/_locales/pl/messages.json
@@ -1,5 +1,5 @@
 {
-"cj_i18n_00354":{"message":"Darowizna"},
+"cj_i18n_00354":{"message":"Wspomóż Rozwój"},
 "cj_i18n_01605":{"message":"Pomóż w tłumaczeniu"},
 "cj_i18n_02146":{"message":"Automatycznie ustaw jakość filmu na YouTube zgodnie z jego FPS!"},
 "cj_i18n_02148":{"message":"FPS wideo"},
