--- a/assets/_locales/zh/messages.json
+++ b/assets/_locales/zh/messages.json
@@ -9,7 +9,7 @@
 "cj_i18n_06858":{"message":"所有的影格速率"},
 "cj_i18n_06860":{"message":"支持開發者"},
 "cj_i18n_06861":{"message":"評價擴充功能"},
-"cj_i18n_06862":{"message":"所有的影格速率皆用相同的畫質"},
+"cj_i18n_06862":{"message":"所有的幀率皆用相同的畫質"},
 "cj_i18n_07097":{"message":"預設檢視模式"},
 "cj_i18n_07098":{"message":"劇院模式"},
 "cj_i18n_07265":{"message":"影片在這個畫質下播放最高到 30 FPS"},
