--- a/assets/_locales/ar/messages.json
+++ b/assets/_locales/ar/messages.json
@@ -5,5 +5,6 @@
 "cj_i18n_02148":{"message":"فيديوهات FPS"},
 "cj_i18n_02149":{"message":"FPS فما أدنى"},
 "cj_i18n_06860":{"message":"دعم المطور"},
-"cj_i18n_06861":{"message":"تقييم الإمتداد"}
+"cj_i18n_06861":{"message":"تقييم الإمتداد"},
+"cj_i18n_06862":{"message":"استخدم نفس الجودة لجميع معدلات الإطارات"}
 }
