--- a/assets/_locales/hu/messages.json
+++ b/assets/_locales/hu/messages.json
@@ -10,6 +10,9 @@
 "cj_i18n_06860":{"message":"A fejlesztő támogatása"},
 "cj_i18n_06861":{"message":"Kiterjesztés értékelése"},
 "cj_i18n_06862":{"message":"Ugyan az a minőség használata az összes képkocka sebességhez"},
+"cj_i18n_07097":{"message":"Alapértelmezett nézet"},
+"cj_i18n_07098":{"message":"Mozi kilátás"},
 "cj_i18n_07265":{"message":"Ebben a minőségben a videók akár 30 FPS-sel is lejátszhatóak."},
-"cj_i18n_07266":{"message":"A bővítmény be van kapcsolva"}
+"cj_i18n_07266":{"message":"A bővítmény be van kapcsolva"},
+"cj_i18n_07392":{"message":"Használjon megnövelt bitsebességet, ha az a legjobb minőségű"}
 }
