--- a/assets/_locales/pt_PT/messages.json
+++ b/assets/_locales/pt_PT/messages.json
@@ -7,7 +7,7 @@
 "cj_i18n_06567":{"message":"Escolher tamanho"},
 "cj_i18n_06568":{"message":"Redimensionar vídeos automaticamente"},
 "cj_i18n_06858":{"message":"Todas as taxas de quadro"},
-"cj_i18n_06860":{"message":"Desenvolvedor de suporte"},
+"cj_i18n_06860":{"message":"Apoie o desenvolvimento"},
 "cj_i18n_06861":{"message":"Avalie a extensão"},
 "cj_i18n_06862":{"message":"Use a mesma qualidade para todas as taxas de quadros"},
 "cj_i18n_07097":{"message":"Vista padrão"},
