--- a/assets/_locales/he/messages.json
+++ b/assets/_locales/he/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07098":{"message":"תצוגה קולנועית"},
 "cj_i18n_07265":{"message":"הסרטון יתנגן בעד 30 פריימים לשנייה באיכות הזו"},
 "cj_i18n_07266":{"message":"התוסף פעיל"},
-"cj_i18n_07392":{"message":"להשתמש בקצב העברת נתונים משופר כשזו האיכות הגבוהה ביותר"}
+"cj_i18n_07392":{"message":"להשתמש בקצב העברת נתונים משופר כשזו האיכות הגבוהה ביותר"},
+"cj_i18n_07584":{"message":"דרוש יוטיוב פרימיום"}
 }
