--- a/assets/_locales/cs/messages.json
+++ b/assets/_locales/cs/messages.json
@@ -1,5 +1,5 @@
 {
 "cj_i18n_00354":{"message":"Přispět"},
 "cj_i18n_01605":{"message":"Pomoc s překlady"},
-"cj_i18n_02146":{"message":"Automaticky nastaví kvalitu videa na YouTube podle jeho snímkové frekvence!"}
+"cj_i18n_02146":{"message":"Automatické nastavení kvality videa na YouTube podle jeho FPS!"}
 }
