Updated translation messages

--- a/assets/_locales/it/messages.json
+++ b/assets/_locales/it/messages.json
@@ -15,5 +15,6 @@
 "cj_i18n_07265":{"message":"I video pagheranno fino a 30 FPS per questa qualità."},
 "cj_i18n_07266":{"message":"L'estensione è attiva"},
 "cj_i18n_07392":{"message":"Quando è della massima qualità usa il bitrate avanzato"},
-"cj_i18n_07584":{"message":"Richiede YouTube Premium"}
+"cj_i18n_07584":{"message":"Richiede YouTube Premium"},
+"cj_i18n_07588":{"message":"Usa bitrate avanzato quando disponibile"}
 }
