--- a/assets/_locales/pl/messages.json
+++ b/assets/_locales/pl/messages.json
@@ -14,7 +14,7 @@
 "cj_i18n_07098":{"message":"Widok kinowy"},
 "cj_i18n_07265":{"message":"Filmy będą odtwarzane z prędkością do 30 FPS dla tej jakości."},
 "cj_i18n_07266":{"message":"Rozszerzenie jest włączone"},
-"cj_i18n_07392":{"message":"Użyj zwiększonej szybkości transmisji bitów, gdy jest wyższej jakości"}
+"cj_i18n_07392":{"message":"Użyj zwiększonej szybkości transmisji bitów, gdy jest wyższej jakości"},
 "cj_i18n_07584":{"message":"Wymaga YouTube Premium"},
 "cj_i18n_07588":{"message":"Użyj zwiększonej szybkości transmisji bitów, gdy jest dostępna"}
 }
