--- a/assets/_locales/be/messages.json
+++ b/assets/_locales/be/messages.json
@@ -14,5 +14,7 @@
 "cj_i18n_07098":{"message":"Рэжым тэатра"},
 "cj_i18n_07265":{"message":"Для гэтай якасці відэа будуць прайгравацца з хуткасцю да 30 кадраў у секунду."},
 "cj_i18n_07266":{"message":"Пашырэнне ўключана"},
-"cj_i18n_07392":{"message":"Выкарыстоўваць павышаны бітрэйт, пры найвышэйшай якасці"}
+"cj_i18n_07392":{"message":"Выкарыстоўваць павышаны бітрэйт, пры найвышэйшай якасці"},
+"cj_i18n_07584":{"message":"Патрабуе YouTube Premium"},
+"cj_i18n_07588":{"message":"Выкарыстоўваць павышаны бітрэйт, калі ён даступны"}
 }
