--- a/assets/_locales/ru/messages.json
+++ b/assets/_locales/ru/messages.json
@@ -1,7 +1,7 @@
 {
 "cj_i18n_00354":{"message":"Пожертвовать"},
 "cj_i18n_01605":{"message":"Предложить перевод"},
-"cj_i18n_02146":{"message":"Автоматически выбирает качество видео в роликах на YouTube основываясь на частоте смены кадров!"},
+"cj_i18n_02146":{"message":"Автоматически выбирает качество видео на YouTube, основываясь на его частоте кадров!"},
 "cj_i18n_02148":{"message":"FPS и ниже"},
 "cj_i18n_02149":{"message":"FPS и ниже"},
 "cj_i18n_06567":{"message":"Использовать постоянный режим просмотра"},
