--- a/assets/_locales/en/messages.json
+++ b/assets/_locales/en/messages.json
@@ -16,5 +16,5 @@
 "cj_i18n_07266":{"message":"Extension is on"},
 "cj_i18n_07392":{"message":"Use enhanced bitrate when it’s the highest quality"},
 "cj_i18n_07584":{"message":"Requires YouTube Premium"},
-"cj_i18n_07588":{"message":"Use enhanced bitrate when available"}
+"cj_i18n_07669":{"message":"Contact me"}
 }
