--- a/assets/_locales/iw/messages.json
+++ b/assets/_locales/iw/messages.json
@@ -15,5 +15,6 @@
 "cj_i18n_07265":{"message":"הסרטון יתנגן בעד 30 פריימים לשנייה באיכות הזו"},
 "cj_i18n_07266":{"message":"התוסף פעיל"},
 "cj_i18n_07392":{"message":"להשתמש בקצב העברת נתונים משופר כשזו האיכות הגבוהה ביותר"},
-"cj_i18n_07584":{"message":"דרוש יוטיוב פרימיום"}
+"cj_i18n_07584":{"message":"דרוש יוטיוב פרימיום"},
+"cj_i18n_07669":{"message":"יצירת קשר איתי"}
 }
