--- a/src/public/_locales/be/messages.json
+++ b/src/public/_locales/be/messages.json
@@ -16,5 +16,6 @@
 "cj_i18n_07266":{"message":"Пашырэнне ўключана"},
 "cj_i18n_07392":{"message":"Выкарыстоўваць павышаны бітрэйт, пры найвышэйшай якасці"},
 "cj_i18n_07584":{"message":"Патрабуе YouTube Premium"},
-"cj_i18n_07669":{"message":"Звяжыцеся са мной"}
+"cj_i18n_07669":{"message":"Звяжыцеся са мной"},
+"cj_i18n_07754":{"message":"Акрамя вертыкальных відэа"}
 }
