--- a/src/public/_locales/en/messages.json
+++ b/src/public/_locales/en/messages.json
@@ -16,5 +16,6 @@
 "cj_i18n_07266":{"message":"Extension is on"},
 "cj_i18n_07392":{"message":"Use enhanced bitrate when it’s the highest quality"},
 "cj_i18n_07584":{"message":"Requires YouTube Premium"},
-"cj_i18n_07669":{"message":"Contact me"}
+"cj_i18n_07669":{"message":"Contact me"},
+"cj_i18n_07754":{"message":"Except for vertical videos"}
 }
