--- a/src/public/_locales/ko/messages.json
+++ b/src/public/_locales/ko/messages.json
@@ -8,5 +8,6 @@
 "cj_i18n_06860":{"message":"개발자 지원하기"},
 "cj_i18n_06861":{"message":"확장기능 평점주기"},
 "cj_i18n_07097":{"message":"기본 보기"},
-"cj_i18n_07098":{"message":"영화관 보기"}
+"cj_i18n_07098":{"message":"영화관 보기"},
+"cj_i18n_07669":{"message":"연락하기"}
 }
