--- a/src/public/_locales/pt_BR/messages.json
+++ b/src/public/_locales/pt_BR/messages.json
@@ -13,5 +13,6 @@
 "cj_i18n_07097":{"message":"Visualização padrão"},
 "cj_i18n_07098":{"message":"Visualização de cinema"},
 "cj_i18n_07265":{"message":"Vídeos serão reproduzidos até 30 FPS nessa qualidade."},
-"cj_i18n_07266":{"message":"A extensão está ligada"}
+"cj_i18n_07266":{"message":"A extensão está ligada"},
+"cj_i18n_07669":{"message":"Me contate"}
 }
