--- a/src/public/_locales/ru/messages.json
+++ b/src/public/_locales/ru/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07098":{"message":"Режим кинотеатра"},
 "cj_i18n_07265":{"message":"Видео будет воспроизводиться со скоростью до 30 кадров в секунду для этого качества."},
 "cj_i18n_07266":{"message":"Расширение включено"},
-"cj_i18n_07392":{"message":"Использовать повышенный битрейт, если он обеспечивает максимальное качество"}
+"cj_i18n_07392":{"message":"Использовать повышенный битрейт, если он обеспечивает максимальное качество"},
+"cj_i18n_07669":{"message":"Свяжитесь со мной"}
 }
