--- a/src/public/_locales/uk/messages.json
+++ b/src/public/_locales/uk/messages.json
@@ -9,5 +9,6 @@
 "cj_i18n_06858":{"message":"Усі частоти кадрів"},
 "cj_i18n_06860":{"message":"Підтримка розробника"},
 "cj_i18n_06861":{"message":"Оцінити розширення"},
-"cj_i18n_06862":{"message":"Використовувати однакову якість для всіх частот кадрів"}
+"cj_i18n_06862":{"message":"Використовувати однакову якість для всіх частот кадрів"},
+"cj_i18n_07669":{"message":"Зв'яжіться зі мною"}
 }
