--- a/src/public/_locales/iw/messages.json
+++ b/src/public/_locales/iw/messages.json
@@ -16,5 +16,6 @@
 "cj_i18n_07266":{"message":"התוסף פעיל"},
 "cj_i18n_07392":{"message":"להשתמש בקצב העברת נתונים משופר כשזו האיכות הגבוהה ביותר"},
 "cj_i18n_07584":{"message":"דרוש יוטיוב פרימיום"},
-"cj_i18n_07669":{"message":"יצירת קשר איתי"}
+"cj_i18n_07669":{"message":"יצירת קשר איתי"},
+"cj_i18n_07754":{"message":"מלבד בסרטונים מאונכים"}
 }
