--- a/src/public/_locales/nl/messages.json
+++ b/src/public/_locales/nl/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07265":{"message":"Videos worden maximaal met 30 FPS afgespeeld met deze kwaliteit."},
 "cj_i18n_07266":{"message":"Extensie staat aan"},
 "cj_i18n_07584":{"message":"YouTube Premium is hiervoor nodig"},
-"cj_i18n_07669":{"message":"Contacteer me"}
+"cj_i18n_07669":{"message":"Contacteer me"},
+"cj_i18n_07754":{"message":"Behalve voor verticale video’s"}
 }
