Add more translations, add more languages, fix south slavic script variations

--- a/src/public/_locales/fr/messages.json
+++ b/src/public/_locales/fr/messages.json
@@ -16,5 +16,6 @@
 "cj_i18n_07266":{"message":"L’extension est activée"},
 "cj_i18n_07392":{"message":"Utiliser le bitrate amélioré lorsque la qualité est supérieure"},
 "cj_i18n_07584":{"message":"Requiert YouTube Premium"},
-"cj_i18n_07669":{"message":"Contactez-moi"}
+"cj_i18n_07669":{"message":"Contactez-moi"},
+"cj_i18n_07754":{"message":"Sauf pour vidéos verticales"}
 }
