--- a/src/public/_locales/zh/messages.json
+++ b/src/public/_locales/zh/messages.json
@@ -1,18 +1,18 @@
 {
-"cj_i18n_00354":{"message":"贊助"},
-"cj_i18n_01605":{"message":"協助翻譯"},
-"cj_i18n_02146":{"message":"根據 FPS 自動設定 YouTube 上的影片畫質！"},
-"cj_i18n_02148":{"message":"FPS 影片"},
-"cj_i18n_02149":{"message":"FPS 和以下"},
-"cj_i18n_06567":{"message":"維持影片大小為"},
-"cj_i18n_06568":{"message":"自動調整影片大小"},
-"cj_i18n_06858":{"message":"所有的影格速率"},
-"cj_i18n_06860":{"message":"支持開發者"},
-"cj_i18n_06861":{"message":"評價擴充功能"},
-"cj_i18n_06862":{"message":"所有的幀率皆用相同的畫質"},
-"cj_i18n_07097":{"message":"預設檢視模式"},
-"cj_i18n_07098":{"message":"劇院模式"},
-"cj_i18n_07265":{"message":"影片在這個畫質下播放最高到 30 FPS"},
-"cj_i18n_07266":{"message":"功能開啟"},
-"cj_i18n_07392":{"message":"使用強化位元率 (當它為最高畫質時)"}
+"cj_i18n_00354":{"message":"捐赠"},
+"cj_i18n_01605":{"message":"帮助翻译"},
+"cj_i18n_02146":{"message":"自动根据帧率来设置 Youtube 视频的质量"},
+"cj_i18n_02148":{"message":"帧率视频"},
+"cj_i18n_02149":{"message":"及以下帧率"},
+"cj_i18n_06567":{"message":"维持视频大小为"},
+"cj_i18n_06568":{"message":"自动调整视频大小"},
+"cj_i18n_06858":{"message":"帧率"},
+"cj_i18n_06860":{"message":"支持开发员"},
+"cj_i18n_06861":{"message":"评价扩展插件"},
+"cj_i18n_06862":{"message":"对所有画质使用相同的帧数"},
+"cj_i18n_07097":{"message":"预设检视模式"},
+"cj_i18n_07098":{"message":"剧院模式"},
+"cj_i18n_07265":{"message":"将此画质下的帧率限制为30FPS"},
+"cj_i18n_07266":{"message":"插件已开启"},
+"cj_i18n_07392":{"message":"当视频为最高质量时，开启YouTube的增强比特率功能"}
 }
