--- a/src/public/_locales/id/messages.json
+++ b/src/public/_locales/id/messages.json
@@ -9,5 +9,6 @@
 "cj_i18n_06858":{"message":"Semua tingkat bingkai"},
 "cj_i18n_06860":{"message":"Dukung pengembang"},
 "cj_i18n_06861":{"message":"Rate ekstensi"},
-"cj_i18n_06862":{"message":"Gunakan kualitas yang sama untuk semua tingkat bingkai"}
+"cj_i18n_06862":{"message":"Gunakan kualitas yang sama untuk semua tingkat bingkai"},
+"cj_i18n_07669":{"message":"Hubungi saya"}
 }
