--- a/src/public/_locales/it/messages.json
+++ b/src/public/_locales/it/messages.json
@@ -16,5 +16,6 @@
 "cj_i18n_07266":{"message":"L'estensione è attiva"},
 "cj_i18n_07392":{"message":"Quando è della massima qualità usa il bitrate avanzato"},
 "cj_i18n_07584":{"message":"Richiede YouTube Premium"},
-"cj_i18n_07669":{"message":"Contattami"}
+"cj_i18n_07669":{"message":"Contattami"},
+"cj_i18n_07754":{"message":"Fatta eccezione per i video verticali"}
 }
