--- a/src/public/_locales/ca/messages.json
+++ b/src/public/_locales/ca/messages.json
@@ -1,6 +1,21 @@
 {
-"cj_i18n_00354":{"message":"Donà"},
-"cj_i18n_02146":{"message":"Estableix automàticament la qualitat del vídeo a YouTube segons el seu FPS!"},
+"cj_i18n_00354":{"message":"Dona"},
+"cj_i18n_01605":{"message":"Ajudeu amb les traduccions"},
+"cj_i18n_02146":{"message":"Configura automàticament la qualitat del vídeo a YouTube segons els seus FPS!"},
+"cj_i18n_02148":{"message":"FPS del vídeos"},
+"cj_i18n_02149":{"message":"FPS i per sota"},
+"cj_i18n_06567":{"message":"Mantén la mida a"},
+"cj_i18n_06568":{"message":"Canviar la mida dels vídeos automàticament"},
 "cj_i18n_06858":{"message":"Totes les velocitats de fotogrames"},
-"cj_i18n_06862":{"message":"Utilitzeu la mateixa qualitat per a totes les velocitats de fotogrames"}
+"cj_i18n_06860":{"message":"Ajuda al desenvolupador"},
+"cj_i18n_06861":{"message":"Valora l'extensió"},
+"cj_i18n_06862":{"message":"Utilitza la mateixa qualitat per a totes les velocitats de fotogrames"},
+"cj_i18n_07097":{"message":"Vista per defecte"},
+"cj_i18n_07098":{"message":"Vista de cinema"},
+"cj_i18n_07265":{"message":"Els vídeos es reproduiran fins a 30 FPS per a aquesta qualitat."},
+"cj_i18n_07266":{"message":"L'extensió està activada"},
+"cj_i18n_07392":{"message":"Utilitza la taxa de bits millorada quan sigui de màxima qualitat"},
+"cj_i18n_07584":{"message":"Cal teniar accés al YouTube Premium"},
+"cj_i18n_07669":{"message":"Contacteu-me"},
+"cj_i18n_07754":{"message":"Excepte els vídeos verticals"}
 }
