--- a/src/public/_locales/sr_ME/messages.json
+++ b/src/public/_locales/sr_ME/messages.json
@@ -1,9 +1,7 @@
 {
-"cj_i18n_00354":{"message":"Doniraj"},
+"cj_i18n_00354":{"message":"Donirajte"},
 "cj_i18n_01605":{"message":"Pomoć oko prevoda"},
-"cj_i18n_02146":{"message":"Automatski postavi video kvalitetu na YouTube-u."},
-"cj_i18n_02148":{"message":"k/s video"},
-"cj_i18n_02149":{"message":"k/s i niže"},
+"cj_i18n_02146":{"message":"Automatski podesite video kvalitet na YouTube-u."},
 "cj_i18n_06567":{"message":"Zadržite veličinu na"},
 "cj_i18n_06568":{"message":"Automatski promeni veličinu video zapisa"},
 "cj_i18n_06858":{"message":"Sve brzine kadrova"},
