--- a/src/public/_locales/zh/messages.json
+++ b/src/public/_locales/zh/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07098":{"message":"剧院模式"},
 "cj_i18n_07265":{"message":"将此画质下的帧率限制为30FPS"},
 "cj_i18n_07266":{"message":"插件已开启"},
-"cj_i18n_07392":{"message":"当视频为最高质量时，开启YouTube的增强比特率功能"}
+"cj_i18n_07392":{"message":"当视频为最高质量时，开启YouTube的增强比特率功能"},
+"cj_i18n_07669":{"message":"联系我们"}
 }
