--- a/src/public/_locales/zh_HK/messages.json
+++ b/src/public/_locales/zh_HK/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07098":{"message":"劇院模式"},
 "cj_i18n_07265":{"message":"影片在這個畫質下播放最高到 30 FPS"},
 "cj_i18n_07266":{"message":"功能開啟"},
-"cj_i18n_07392":{"message":"使用強化位元率 (當它為最高畫質時)"}
+"cj_i18n_07392":{"message":"使用強化位元率 (當它為最高畫質時)"},
+"cj_i18n_07669":{"message":"聯系我們"}
 }
