--- a/src/public/_locales/ru/messages.json
+++ b/src/public/_locales/ru/messages.json
@@ -17,5 +17,5 @@
 "cj_i18n_07392":{"message":"Использовать повышенный битрейт, если он обеспечивает максимальное качество"},
 "cj_i18n_07584":{"message":"Патрабуе YouTube Premium"},
 "cj_i18n_07669":{"message":"Свяжитесь со мной"},
-"cj_i18n_07754":{"message":"Акрамя вертыкальных відэа"}
+"cj_i18n_07754":{"message":"Акрамя вертыкальных видэа"}
 }
