--- a/src/public/_locales/ca/messages.json
+++ b/src/public/_locales/ca/messages.json
@@ -1,11 +1,11 @@
 {
 "cj_i18n_00354":{"message":"Dona"},
-"cj_i18n_01605":{"message":"Ajudeu amb les traduccions"},
+"cj_i18n_01605":{"message":"Ajuda amb les traduccions"},
 "cj_i18n_02146":{"message":"Configura automàticament la qualitat del vídeo a YouTube segons els seus FPS!"},
-"cj_i18n_02148":{"message":"FPS del vídeos"},
+"cj_i18n_02148":{"message":"FPS dels vídeos"},
 "cj_i18n_02149":{"message":"FPS i per sota"},
 "cj_i18n_06567":{"message":"Mantén la mida a"},
-"cj_i18n_06568":{"message":"Canviar la mida dels vídeos automàticament"},
+"cj_i18n_06568":{"message":"Canvia la mida dels vídeos automàticament"},
 "cj_i18n_06858":{"message":"Totes les velocitats de fotogrames"},
 "cj_i18n_06860":{"message":"Ajuda al desenvolupador"},
 "cj_i18n_06861":{"message":"Valora l'extensió"},
