--- a/src/public/_locales/uk/messages.json
+++ b/src/public/_locales/uk/messages.json
@@ -10,5 +10,12 @@
 "cj_i18n_06860":{"message":"Підтримка розробника"},
 "cj_i18n_06861":{"message":"Оцінити розширення"},
 "cj_i18n_06862":{"message":"Використовувати однакову якість для всіх частот кадрів"},
-"cj_i18n_07669":{"message":"Зв'яжіться зі мною"}
+"cj_i18n_07097":{"message":"Стандартни вигляд"},
+"cj_i18n_07098":{"message":"Режим театра"},
+"cj_i18n_07265":{"message":"Для гетай якасці відеа будуць прайгравацца з хуткасцю да 30 кадрав у секунду."},
+"cj_i18n_07266":{"message":"Паширенне включана"},
+"cj_i18n_07392":{"message":"Викаристовваць павишани бітрейт, при найвишейшай якасці"},
+"cj_i18n_07584":{"message":"Патрабуе YouTube Premium"},
+"cj_i18n_07669":{"message":"Звʼяжіться зі мною"},
+"cj_i18n_07754":{"message":"Акрамя вертикальних відеа"}
 }
