--- a/src/public/_locales/de/messages.json
+++ b/src/public/_locales/de/messages.json
@@ -9,7 +9,7 @@
 "cj_i18n_06858":{"message":"Alle Bildraten"},
 "cj_i18n_06860":{"message":"Unterstütze den Entwickler"},
 "cj_i18n_06861":{"message":"Bewerte die Erweiterung"},
-"cj_i18n_06862":{"message":"Gleiche Qualität für alle Bildrate"},
+"cj_i18n_06862":{"message":"Gleiche Qualität für alle Bildraten verwenden"},
 "cj_i18n_07266":{"message":"Erweiterung ist eingeschaltet"},
 "cj_i18n_07392":{"message":"Nutze die verbesserte Bitrate, sofern verfügbar."}
 }
