--- a/src/public/_locales/de_CH/messages.json
+++ b/src/public/_locales/de_CH/messages.json
@@ -1,5 +1,4 @@
 {
 "cj_i18n_01605":{"message":"Mit der Übersetzung helfen"},
-"cj_i18n_06567":{"message":"Grösse beibehalten bei"},
-"cj_i18n_06862":{"message":"Nutze die selbe Qualität für alle Bildraten"}
+"cj_i18n_06567":{"message":"Grösse beibehalten bei"}
 }
