--- a/src/public/_locales/ja/messages.json
+++ b/src/public/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
 "cj_i18n_00354":{"message":"寄付"},
-"cj_i18n_01605":{"message":"翻訳をお手伝い"},
+"cj_i18n_01605":{"message":"翻訳を手伝う"},
 "cj_i18n_02146":{"message":"YouTubeの動画の画質をFPSに合わせて自動的に設定してくれます"},
 "cj_i18n_02148":{"message":"FPS"},
 "cj_i18n_02149":{"message":"FPS以下"},
@@ -10,6 +10,12 @@
 "cj_i18n_06860":{"message":"開発者を支援"},
 "cj_i18n_06861":{"message":"拡張機能を評価"},
 "cj_i18n_06862":{"message":"全てのフレームレートに対して同じ品質を使用"},
+"cj_i18n_07097":{"message":"標準モード"},
+"cj_i18n_07098":{"message":"シネマモード"},
 "cj_i18n_07265":{"message":"この品質では、動画は最大 30 FPS で再生されます。"},
-"cj_i18n_07266":{"message":"拡張機能が有効になっています"}
+"cj_i18n_07266":{"message":"拡張機能が有効になっています"},
+"cj_i18n_07392":{"message":"最高品質の場合は拡張ビットレートを使用する"},
+"cj_i18n_07584":{"message":"YouTube Premiumが必要です"},
+"cj_i18n_07669":{"message":"お問い合わせ"},
+"cj_i18n_07754":{"message":"ショート動画を除く"}
 }
