--- a/src/public/_locales/af/messages.json
+++ b/src/public/_locales/af/messages.json
@@ -1,20 +1,20 @@
 {
-"cj_i18n_00354":{"message":"Doneren"},
-"cj_i18n_01605":{"message":"Draag bij aan vertalingen"},
-"cj_i18n_02146":{"message":"Pas videokwaliteit op YouTube automatisch aan op basis van de FPS!"},
-"cj_i18n_02148":{"message":"FPS video’s"},
-"cj_i18n_02149":{"message":"FPS en lager"},
-"cj_i18n_06567":{"message":"Houd formaat op"},
-"cj_i18n_06568":{"message":"Videos automatisch schalen"},
+"cj_i18n_00354":{"message":"Skenk"},
+"cj_i18n_01605":{"message":"Dra by tot vertalings"},
+"cj_i18n_02146":{"message":"Pas videokwaliteit outomaties aan op YouTube gebaseer op FPS!"},
+"cj_i18n_02148":{"message":"FPS video's"},
+"cj_i18n_02149":{"message":"FPS en laer"},
+"cj_i18n_06567":{"message":"Hou formaat aan"},
+"cj_i18n_06568":{"message":"Outomatiese skaal video's"},
 "cj_i18n_06858":{"message":"Alle framerates"},
-"cj_i18n_06860":{"message":"Ondersteun ontwikkelaar"},
-"cj_i18n_06861":{"message":"Waardeer extensie"},
-"cj_i18n_06862":{"message":"Gebruik dezelfde kwaliteit voor alle framerates"},
-"cj_i18n_07097":{"message":"Normale weergave"},
-"cj_i18n_07098":{"message":"Theatermodus"},
-"cj_i18n_07265":{"message":"Videos worden maximaal met 30 FPS afgespeeld met deze kwaliteit."},
-"cj_i18n_07266":{"message":"Extensie staat aan"},
-"cj_i18n_07584":{"message":"YouTube Premium is hiervoor nodig"},
-"cj_i18n_07669":{"message":"Contacteer me"},
-"cj_i18n_07754":{"message":"Behalve voor verticale video’s"}
+"cj_i18n_06860":{"message":"Ondersteuning Ontwikkelaar"},
+"cj_i18n_06861":{"message":"Tarief verlenging"},
+"cj_i18n_06862":{"message":"Gebruik dieselfde kwaliteit vir alle raamkoerse"},
+"cj_i18n_07097":{"message":"Normale uitsig"},
+"cj_i18n_07098":{"message":"Bioskoopvertoning"},
+"cj_i18n_07265":{"message":"Video's word teen 'n maksimum van 30 FPS teen hierdie kwaliteit gespeel."},
+"cj_i18n_07266":{"message":"Uitbreiding is aan"},
+"cj_i18n_07584":{"message":"YouTube Premium word hiervoor vereis"},
+"cj_i18n_07669":{"message":"Kontak my"},
+"cj_i18n_07754":{"message":"Behalwe vir vertikale video's"}
 }
