--- a/src/public/_locales/bs_Cyrl/messages.json
+++ b/src/public/_locales/bs_Cyrl/messages.json
@@ -9,5 +9,6 @@
 "cj_i18n_06858":{"message":"Све брзине кадрова"},
 "cj_i18n_06860":{"message":"Подршка програмеру"},
 "cj_i18n_06861":{"message":"Оцените проширење"},
-"cj_i18n_06862":{"message":"Користите исти квалитет за све брзине кадрова"}
+"cj_i18n_06862":{"message":"Користите исти квалитет за све брзине кадрова"},
+"cj_i18n_07669":{"message":"Контактираjте нас"}
 }
