--- a/src/public/_locales/he/messages.json
+++ b/src/public/_locales/he/messages.json
@@ -17,5 +17,6 @@
 "cj_i18n_07392":{"message":"להשתמש בקצב העברת נתונים משופר כשזו האיכות הגבוהה ביותר"},
 "cj_i18n_07584":{"message":"דרוש יוטיוב פרימיום"},
 "cj_i18n_07669":{"message":"יצירת קשר איתי"},
-"cj_i18n_07754":{"message":"מלבד בסרטונים מאונכים"}
+"cj_i18n_07754":{"message":"מלבד בסרטונים מאונכים"},
+"cj_i18n_07966":{"message":"ללהשתמש בשדרוג הרזולוציה"}
 }
