--- a/src/public/_locales/hu/messages.json
+++ b/src/public/_locales/hu/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07098":{"message":"Mozi kilátás"},
 "cj_i18n_07265":{"message":"Ebben a minőségben a videók akár 30 FPS-sel is lejátszhatóak."},
 "cj_i18n_07266":{"message":"A bővítmény be van kapcsolva"},
-"cj_i18n_07392":{"message":"Használjon megnövelt bitsebességet, ha az a legjobb minőségű"}
+"cj_i18n_07392":{"message":"Használjon megnövelt bitsebességet, ha az a legjobb minőségű"},
+"cj_i18n_07669":{"message":"Lépjen velüm kapcsolatba"}
 }
