--- a/src/public/_locales/tg_Arab/messages.json
+++ b/src/public/_locales/tg_Arab/messages.json
@@ -6,5 +6,6 @@
 "cj_i18n_06858":{"message":"همه‌ی نسبت‌های نمایش تصویر"},
 "cj_i18n_06862":{"message":"استفاده از کیفیت مشابه برای هر نمایش"},
 "cj_i18n_07097":{"message":"نمای پیش‌فرض"},
-"cj_i18n_07098":{"message":"نمای سینمایی"}
+"cj_i18n_07098":{"message":"نمای سینمایی"},
+"cj_i18n_07669":{"message":"ارتباط با من"}
 }
