--- a/src/public/_locales/vi/messages.json
+++ b/src/public/_locales/vi/messages.json
@@ -7,5 +7,6 @@
 "cj_i18n_06858":{"message":"Tất cả các tốc độ khung hình"},
 "cj_i18n_06860":{"message":"Hỗ trợ nhà phát triển"},
 "cj_i18n_06861":{"message":"Đánh giá tiện ích"},
-"cj_i18n_06862":{"message":"Sử dụng chất lượng như nhau với tất cả các tốc độ khung hình"}
+"cj_i18n_06862":{"message":"Sử dụng chất lượng như nhau với tất cả các tốc độ khung hình"},
+"cj_i18n_07669":{"message":"Liên lạc"}
 }
