--- a/src/public/_locales/cs/messages.json
+++ b/src/public/_locales/cs/messages.json
@@ -1,5 +1,6 @@
 {
 "cj_i18n_00354":{"message":"Přispět"},
 "cj_i18n_01605":{"message":"Pomoc s překlady"},
-"cj_i18n_02146":{"message":"Automatické nastavení kvality videa na YouTube podle jeho FPS!"}
+"cj_i18n_02146":{"message":"Automatické nastavení kvality videa na YouTube podle jeho FPS!"},
+"cj_i18n_07669":{"message":"Kontaktujte nás"}
 }
