--- a/src/public/_locales/en/messages.json
+++ b/src/public/_locales/en/messages.json
@@ -17,5 +17,7 @@
 "cj_i18n_07392":{"message":"Use enhanced bitrate when it’s the highest quality"},
 "cj_i18n_07584":{"message":"Requires YouTube Premium"},
 "cj_i18n_07669":{"message":"Contact me"},
-"cj_i18n_07754":{"message":"Except for vertical videos"}
+"cj_i18n_07754":{"message":"Except for vertical videos"},
+"cj_i18n_07966":{"message":"Use super resolution when available"},
+"cj_i18n_todo":{"message":""}
 }
