--- a/src/public/_locales/eo/messages.json
+++ b/src/public/_locales/eo/messages.json
@@ -1,21 +1,21 @@
 {
-"cj_i18n_00354":{"message":"Faire un don"},
-"cj_i18n_01605":{"message":"Aidez-nous à traduire"},
-"cj_i18n_02146":{"message":"Réglez automatiquement la qualité vidéo sur YouTube en fonction de leur Fréquence d’Images"},
-"cj_i18n_02148":{"message":"FPS Vidéos"},
-"cj_i18n_02149":{"message":"FPS et en-dessous"},
-"cj_i18n_06567":{"message":"Conserver ces dimensions"},
-"cj_i18n_06568":{"message":"Redimensionner automatiquement les vidéos"},
-"cj_i18n_06858":{"message":"Toutes les fréquences d’images"},
-"cj_i18n_06860":{"message":"Soutenir le développeur"},
-"cj_i18n_06861":{"message":"Noter l’extension"},
-"cj_i18n_06862":{"message":"Utiliser la même qualité quelle que soit la fréquence d’images"},
-"cj_i18n_07097":{"message":"Mode par défaut"},
-"cj_i18n_07098":{"message":"Mode cinéma"},
-"cj_i18n_07265":{"message":"Les vidéos seront jouées à 30 images/sec. maximum pour cette qualité."},
-"cj_i18n_07266":{"message":"L’extension est activée"},
-"cj_i18n_07392":{"message":"Utiliser le bitrate amélioré lorsque la qualité est supérieure"},
-"cj_i18n_07584":{"message":"Requiert YouTube Premium"},
-"cj_i18n_07669":{"message":"Contactez-moi"},
-"cj_i18n_07754":{"message":"Sauf pour vidéos verticales"}
+"cj_i18n_00354":{"message":"Donu"},
+"cj_i18n_01605":{"message":"Kontribuu al la traduko"},
+"cj_i18n_02146":{"message":"Aŭtomate agordu jutuban videokvaliton bazitan sur FPS!"},
+"cj_i18n_02148":{"message":"FPS-video"},
+"cj_i18n_02149":{"message":"FPS kaj malpli"},
+"cj_i18n_06567":{"message":"Konservu grandecon"},
+"cj_i18n_06568":{"message":"Aŭtomate regrandigi filmeton"},
+"cj_i18n_06858":{"message":"Ĉiuj framfrekvencoj"},
+"cj_i18n_06860":{"message":"Subtenu la programiston"},
+"cj_i18n_06861":{"message":"Etenda Taksado"},
+"cj_i18n_06862":{"message":"Agordu la saman kvaliton por ĉiuj framfrekvencoj"},
+"cj_i18n_07097":{"message":"Defaŭlta vido"},
+"cj_i18n_07098":{"message":"Kinovido"},
+"cj_i18n_07265":{"message":"Filmetoj pagos ĝis 30 FPS por ĉi tiu kvalito."},
+"cj_i18n_07266":{"message":"La etendaĵo estas aktiva"},
+"cj_i18n_07392":{"message":"Kiam ĝi estas ĉe sia plej alta kvalito, uzu la altnivelan bitratecon."},
+"cj_i18n_07584":{"message":"Postulas YouTube Premium"},
+"cj_i18n_07669":{"message":"Kontaktu min"},
+"cj_i18n_07754":{"message":"Krom vertikalaj filmetoj"}
 }
