--- a/src/public/_locales/nl_BE/messages.json
+++ b/src/public/_locales/nl_BE/messages.json
@@ -1,5 +1,6 @@
 {
 "cj_i18n_06861":{"message":"Beoordeel extensie"},
+"cj_i18n_07097":{"message":"Normale weergave"},
 "cj_i18n_07098":{"message":"Cinema weergave"},
 "cj_i18n_07265":{"message":"Videos worden op maximaal 30 FPS afgespeeld met deze kwaliteit."}
 }
