--- a/src/public/_locales/no/messages.json
+++ b/src/public/_locales/no/messages.json
@@ -11,5 +11,6 @@
 "cj_i18n_06861":{"message":"Ranger utvidelsen"},
 "cj_i18n_06862":{"message":"Bruk samme kvalitet for alle bildefrekvenser"},
 "cj_i18n_07097":{"message":"Standard visning"},
-"cj_i18n_07098":{"message":"Kino-visning"}
+"cj_i18n_07098":{"message":"Kino-visning"},
+"cj_i18n_07669":{"message":"Kontakt oss"}
 }
