--- a/src/public/_locales/pt_PT/messages.json
+++ b/src/public/_locales/pt_PT/messages.json
@@ -14,5 +14,5 @@
 "cj_i18n_07098":{"message":"Visualização de cinema"},
 "cj_i18n_07265":{"message":"Vídeos serão reproduzidos até 30 FPS nessa qualidade."},
 "cj_i18n_07266":{"message":"A extensão está ativa"},
-"cj_i18n_07669":{"message":"Me contate"}
+"cj_i18n_07669":{"message":"Entre em contacto comigo"}
 }
