--- a/src/public/_locales/zh_TW/messages.json
+++ b/src/public/_locales/zh_TW/messages.json
@@ -15,5 +15,5 @@
 "cj_i18n_07265":{"message":"影片在這個畫質下播放最高到 30 FPS"},
 "cj_i18n_07266":{"message":"功能開啟"},
 "cj_i18n_07392":{"message":"使用強化位元率 (當它為最高畫質時)"},
-"cj_i18n_07669":{"message":"聯繫我們"}
+"cj_i18n_07669":{"message":"聯絡我們"}
 }
