--- a/src/public/_locales/ca/messages.json
+++ b/src/public/_locales/ca/messages.json
@@ -15,7 +15,7 @@
 "cj_i18n_07265":{"message":"Els vídeos es reproduiran fins a 30 FPS per a aquesta qualitat."},
 "cj_i18n_07266":{"message":"L'extensió està activada"},
 "cj_i18n_07392":{"message":"Utilitza la taxa de bits millorada quan sigui de màxima qualitat"},
-"cj_i18n_07584":{"message":"Cal teniar accés al YouTube Premium"},
+"cj_i18n_07584":{"message":"Cal tenir accés al YouTube Premium"},
 "cj_i18n_07669":{"message":"Contacteu-me"},
 "cj_i18n_07754":{"message":"Excepte els vídeos verticals"}
 }
