--- a/src/public/_locales/sr_ME/messages.json
+++ b/src/public/_locales/sr_ME/messages.json
@@ -7,5 +7,6 @@
 "cj_i18n_06858":{"message":"Sve brzine kadrova"},
 "cj_i18n_06860":{"message":"Podrška programeru"},
 "cj_i18n_06861":{"message":"Ocenite proširenje"},
-"cj_i18n_06862":{"message":"Koristite isti kvalitet za sve brzine kadrova"}
+"cj_i18n_06862":{"message":"Koristite isti kvalitet za sve brzine kadrova"},
+"cj_i18n_07669":{"message":"Kontaktirajte nas"}
 }
