--- a/src/public/_locales/tr/messages.json
+++ b/src/public/_locales/tr/messages.json
@@ -14,5 +14,6 @@
 "cj_i18n_07098":{"message":"Sinema görünümü"},
 "cj_i18n_07265":{"message":"Videolar bu kalite için 30 FPS'de oynayacak"},
 "cj_i18n_07266":{"message":"Eklenti açık"},
-"cj_i18n_07392":{"message":"En yüksek kalite olduğunda gelişmiş bit hızını kullan"}
+"cj_i18n_07392":{"message":"En yüksek kalite olduğunda gelişmiş bit hızını kullan"},
+"cj_i18n_07669":{"message":"Bizimle iletişime geç"}
 }
