--- a/src/public/_locales/quz/messages.json
+++ b/src/public/_locales/quz/messages.json
@@ -9,5 +9,6 @@
 "cj_i18n_06858":{"message":"Todas las frecuencias de fotogramas"},
 "cj_i18n_06860":{"message":"Ayudar al desarrollador"},
 "cj_i18n_06861":{"message":"Calificar extensión"},
-"cj_i18n_06862":{"message":"Usar la misma calidad para todas las frecuencias de fotogramas"}
+"cj_i18n_06862":{"message":"Usar la misma calidad para todas las frecuencias de fotogramas"},
+"cj_i18n_07669":{"message":"Contáctenos"}
 }
