Update afrikaans, danish, swedish, esparanto, russian and ukranian translations

--- a/src/public/_locales/ru/messages.json
+++ b/src/public/_locales/ru/messages.json
@@ -15,7 +15,7 @@
 "cj_i18n_07265":{"message":"Видео будет воспроизводиться со скоростью до 30 кадров в секунду для этого качества."},
 "cj_i18n_07266":{"message":"Расширение включено"},
 "cj_i18n_07392":{"message":"Использовать повышенный битрейт, если он обеспечивает максимальное качество"},
-"cj_i18n_07584":{"message":"Патрабуе YouTube Premium"},
+"cj_i18n_07584":{"message":"Потрібен YouTube Premium"},
 "cj_i18n_07669":{"message":"Свяжитесь со мной"},
-"cj_i18n_07754":{"message":"Акрамя вертыкальных видэа"}
+"cj_i18n_07754":{"message":"Крім вертикальних відео"}
 }
