--- a/src/public/_locales/da/messages.json
+++ b/src/public/_locales/da/messages.json
@@ -1,16 +1,16 @@
 {
 "cj_i18n_00354":{"message":"Doner"},
-"cj_i18n_01605":{"message":"Hjelp med oversettelser"},
-"cj_i18n_02146":{"message":"Angi videokvaliteten på YouTube automatisk i henhold til deres FPS!"},
+"cj_i18n_01605":{"message":"Hjælp med oversættelser"},
+"cj_i18n_02146":{"message":"Indstil YouTube-videokvalitet automatisk i henhold til deres FPS!"},
 "cj_i18n_02148":{"message":"FPS videoer"},
-"cj_i18n_02149":{"message":"FPS og under"},
-"cj_i18n_06567":{"message":"Behold størrelse på"},
-"cj_i18n_06568":{"message":"Automatisk endre størrelse på videoer"},
+"cj_i18n_02149":{"message":"FPS og derunder"},
+"cj_i18n_06567":{"message":"Hold størrelsen på"},
+"cj_i18n_06568":{"message":"Ændr automatisk størrelse på videoer"},
 "cj_i18n_06858":{"message":"Alle framerates"},
-"cj_i18n_06860":{"message":"Støtt utvikleren"},
-"cj_i18n_06861":{"message":"Ranger utvidelsen"},
-"cj_i18n_06862":{"message":"Bruk samme kvalitet for alle bildefrekvenser"},
-"cj_i18n_07097":{"message":"Standard visning"},
-"cj_i18n_07098":{"message":"Kino-visning"},
-"cj_i18n_07669":{"message":"Kontakt oss"}
+"cj_i18n_06860":{"message":"Støt udvikleren"},
+"cj_i18n_06861":{"message":"Bedøm udvidelsen"},
+"cj_i18n_06862":{"message":"Brug den samme kvalitet for alle billedhastigheder"},
+"cj_i18n_07097":{"message":"Standardvisning"},
+"cj_i18n_07098":{"message":"Biografvisning"},
+"cj_i18n_07669":{"message":"Kontakt os"}
 }
