Update to 2025-01-04 translations

--- a/src/public/_locales/ca/messages.json
+++ b/src/public/_locales/ca/messages.json
@@ -17,5 +17,6 @@
 "cj_i18n_07392":{"message":"Utilitza la taxa de bits millorada quan sigui de màxima qualitat"},
 "cj_i18n_07584":{"message":"Cal tenir accés al YouTube Premium"},
 "cj_i18n_07669":{"message":"Contacteu-me"},
-"cj_i18n_07754":{"message":"Excepte els vídeos verticals"}
+"cj_i18n_07754":{"message":"Excepte els vídeos verticals"},
+"cj_i18n_07966":{"message":"Utilitza la superresolució quan estigui disponible"}
 }
