--- a/src/public/_locales/eo/messages.json
+++ b/src/public/_locales/eo/messages.json
@@ -17,5 +17,6 @@
 "cj_i18n_07392":{"message":"Kiam ĝi estas ĉe sia plej alta kvalito, uzu la altnivelan bitratecon."},
 "cj_i18n_07584":{"message":"Postulas YouTube Premium"},
 "cj_i18n_07669":{"message":"Kontaktu min"},
-"cj_i18n_07754":{"message":"Krom vertikalaj filmetoj"}
+"cj_i18n_07754":{"message":"Krom vertikalaj filmetoj"},
+"cj_i18n_07966":{"message":"Usa super risoluzione quando disponibile"}
 }
